--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.9.0",
-    "next": "9.5.1",
-    "next-compose-plugins": "^2.2.0",
-    "next-images": "^1.4.1",
+    "next": "^10.0.3",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.6.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-helmet": "^6.1.0",
